# cmd/generate-config/config/config-openapi-spec.json
@@ -138,15 +138,44 @@
         "listenAddress",
         "ports",
         "routeAdmissionPolicy",
-        "status"
+        "status",
+        "tuningOptions"
       ],
       "properties": {
+        "forwardedHeaderPolicy": {
+          "description": "forwardedHeaderPolicy specifies when and how ingress router\nsets the Forwarded, X-Forwarded-For, X-Forwarded-Host,\nX-Forwarded-Port, X-Forwarded-Proto, and X-Forwarded-Proto-Version\nHTTP headers.  The value may be one of the following:\n\n\n* \"Append\", which specifies that ingress router appends the\n  headers, preserving existing headers.\n\n\n* \"Replace\", which specifies that ingress router sets the\n  headers, replacing any existing Forwarded or X-Forwarded-* headers.\n\n\n* \"IfNone\", which specifies that ingress router sets the\n  headers if they are not already set.\n\n\n* \"Never\", which specifies that ingress router never sets the\n  headers, preserving any existing headers.\n\n\nBy default, the policy is \"Append\".",
+          "type": "string",
+          "enum": [
+            "Append",
+            "Replace",
+            "IfNone",
+            "Never"
+          ]
+        },
+        "httpEmptyRequestsPolicy": {
+          "description": "httpEmptyRequestsPolicy describes how HTTP connections should be\nhandled if the connection times out before a request is received.\nAllowed values for this field are \"Respond\" and \"Ignore\".  If the\nfield is set to \"Respond\", the ingress controller sends an HTTP 400\nor 408 response, logs the connection (if access logging is enabled),\nand counts the connection in the appropriate metrics.  If the field\nis set to \"Ignore\", the ingress controller closes the connection\nwithout sending a response, logging the connection, or incrementing\nmetrics.  The default value is \"Respond\".\n\n\nTypically, these connections come from load balancers' health probes\nor Web browsers' speculative connections (\"preconnect\") and can be\nsafely ignored.  However, these requests may also be caused by\nnetwork errors, and so setting this field to \"Ignore\" may impede\ndetection and diagnosis of problems.  In addition, these requests may\nbe caused by port scans, in which case logging empty requests may aid\nin detecting intrusion attempts.",
+          "type": "string",
+          "default": "Respond",
+          "enum": [
+            "Respond",
+            "Ignore"
+          ]
+        },
         "listenAddress": {
           "description": "List of IP addresses and NIC names where the router will be listening. The NIC\nnames get translated to all their configured IPs dynamically. Defaults to the\nconfigured IPs in the host at MicroShift start.",
           "type": "array",
           "items": {
             "type": "string"
           }
+        },
+        "logEmptyRequests": {
+          "description": "logEmptyRequests specifies how connections on which no request is\nreceived should be logged.  Typically, these empty requests come from\nload balancers' health probes or Web browsers' speculative\nconnections (\"preconnect\"), in which case logging these requests may\nbe undesirable.  However, these requests may also be caused by\nnetwork errors, in which case logging empty requests may be useful\nfor diagnosing the errors.  In addition, these requests may be caused\nby port scans, in which case logging empty requests may aid in\ndetecting intrusion attempts.  Allowed values for this field are\n\"Log\" and \"Ignore\".  The default value is \"Log\".",
+          "type": "string",
+          "default": "Log",
+          "enum": [
+            "Log",
+            "Ignore"
+          ]
         },
         "ports": {
           "type": "object",
@@ -184,6 +213,81 @@
           "description": "Default router status, can be Managed or Removed.",
           "type": "string",
           "default": "Managed"
+        },
+        "tuningOptions": {
+          "description": "IngressControllerTuningOptions specifies options for tuning the performance\nof ingress controller pods",
+          "type": "object",
+          "properties": {
+            "clientFinTimeout": {
+              "description": "clientFinTimeout defines how long a connection will be held open while\nwaiting for the client response to the server/backend closing the\nconnection.\n\n\nIf unset, the default timeout is 1s",
+              "type": "string",
+              "format": "duration"
+            },
+            "clientTimeout": {
+              "description": "clientTimeout defines how long a connection will be held open while\nwaiting for a client response.\n\n\nIf unset, the default timeout is 30s",
+              "type": "string",
+              "format": "duration"
+            },
+            "connectTimeout": {
+              "description": "ConnectTimeout defines the maximum time to wait for\na connection attempt to a server/backend to succeed.\n\n\nThis field expects an unsigned duration string of decimal numbers, each with optional\nfraction and a unit suffix, e.g. \"300ms\", \"1.5h\" or \"2h45m\".\nValid time units are \"ns\", \"us\" (or \"µs\" U+00B5 or \"μs\" U+03BC), \"ms\", \"s\", \"m\", \"h\".\n\n\nWhen omitted, this means the user has no opinion and the platform is left\nto choose a reasonable default. This default is subject to change over time.\nThe current default is 5s.",
+              "type": "string",
+              "pattern": "^(0|([0-9]+(\\.[0-9]+)?(ns|us|µs|μs|ms|s|m|h))+)$"
+            },
+            "headerBufferBytes": {
+              "description": "headerBufferBytes describes how much memory should be reserved\n(in bytes) for IngressController connection sessions.\nNote that this value must be at least 16384 if HTTP/2 is\nenabled for the IngressController (https://tools.ietf.org/html/rfc7540).\nIf this field is empty, the IngressController will use a default value\nof 32768 bytes.\n\n\nSetting this field is generally not recommended as headerBufferBytes\nvalues that are too small may break the IngressController and\nheaderBufferBytes values that are too large could cause the\nIngressController to use significantly more memory than necessary.",
+              "type": "integer",
+              "format": "int32",
+              "minimum": 16384
+            },
+            "headerBufferMaxRewriteBytes": {
+              "description": "headerBufferMaxRewriteBytes describes how much memory should be reserved\n(in bytes) from headerBufferBytes for HTTP header rewriting\nand appending for IngressController connection sessions.\nNote that incoming HTTP requests will be limited to\n(headerBufferBytes - headerBufferMaxRewriteBytes) bytes, meaning\nheaderBufferBytes must be greater than headerBufferMaxRewriteBytes.\nIf this field is empty, the IngressController will use a default value\nof 8192 bytes.\n\n\nSetting this field is generally not recommended as\nheaderBufferMaxRewriteBytes values that are too small may break the\nIngressController and headerBufferMaxRewriteBytes values that are too\nlarge could cause the IngressController to use significantly more memory\nthan necessary.",
+              "type": "integer",
+              "format": "int32",
+              "minimum": 4096
+            },
+            "healthCheckInterval": {
+              "description": "healthCheckInterval defines how long the router waits between two consecutive\nhealth checks on its configured backends.  This value is applied globally as\na default for all routes, but may be overridden per-route by the route annotation\n\"router.openshift.io/haproxy.health.check.interval\".\n\n\nExpects an unsigned duration string of decimal numbers, each with optional\nfraction and a unit suffix, eg \"300ms\", \"1.5h\" or \"2h45m\".\nValid time units are \"ns\", \"us\" (or \"µs\" U+00B5 or \"μs\" U+03BC), \"ms\", \"s\", \"m\", \"h\".\n\n\nSetting this to less than 5s can cause excess traffic due to too frequent\nTCP health checks and accompanying SYN packet storms.  Alternatively, setting\nthis too high can result in increased latency, due to backend servers that are no\nlonger available, but haven't yet been detected as such.\n\n\nAn empty or zero healthCheckInterval means no opinion and IngressController chooses\na default, which is subject to change over time.\nCurrently the default healthCheckInterval value is 5s.\n\n\nCurrently the minimum allowed value is 1s and the maximum allowed value is\n2147483647ms (24.85 days).  Both are subject to change over time.",
+              "type": "string",
+              "pattern": "^(0|([0-9]+(\\.[0-9]+)?(ns|us|µs|μs|ms|s|m|h))+)$"
+            },
+            "maxConnections": {
+              "description": "maxConnections defines the maximum number of simultaneous\nconnections that can be established per HAProxy process.\nIncreasing this value allows each ingress controller pod to\nhandle more connections but at the cost of additional\nsystem resources being consumed.\n\n\nPermitted values are: empty, 0, -1, and the range\n2000-2000000.\n\n\nIf this field is empty or 0, the IngressController will use\nthe default value of 50000, but the default is subject to\nchange in future releases.\n\n\nIf the value is -1 then HAProxy will dynamically compute a\nmaximum value based on the available ulimits in the running\ncontainer. Selecting -1 (i.e., auto) will result in a large\nvalue being computed (~520000 on OpenShift \u003e=4.10 clusters)\nand therefore each HAProxy process will incur significant\nmemory usage compared to the current default of 50000.\n\n\nSetting a value that is greater than the current operating\nsystem limit will prevent the HAProxy process from\nstarting.\n\n\nIf you choose a discrete value (e.g., 750000) and the\nrouter pod is migrated to a new node, there's no guarantee\nthat that new node has identical ulimits configured. In\nsuch a scenario the pod would fail to start. If you have\nnodes with different ulimits configured (e.g., different\ntuned profiles) and you choose a discrete value then the\nguidance is to use -1 and let the value be computed\ndynamically at runtime.\n\n\nYou can monitor memory usage for router containers with the\nfollowing metric:\n'container_memory_working_set_bytes{container=\"router\",namespace=\"openshift-ingress\"}'.\n\n\nYou can monitor memory usage of individual HAProxy\nprocesses in router containers with the following metric:\n'container_memory_working_set_bytes{container=\"router\",namespace=\"openshift-ingress\"}/container_processes{container=\"router\",namespace=\"openshift-ingress\"}'.",
+              "type": "integer",
+              "format": "int32"
+            },
+            "reloadInterval": {
+              "description": "reloadInterval defines the minimum interval at which the router is allowed to reload\nto accept new changes. Increasing this value can prevent the accumulation of\nHAProxy processes, depending on the scenario. Increasing this interval can\nalso lessen load imbalance on a backend's servers when using the roundrobin\nbalancing algorithm. Alternatively, decreasing this value may decrease latency\nsince updates to HAProxy's configuration can take effect more quickly.\n\n\nThe value must be a time duration value; see \u003chttps://pkg.go.dev/time#ParseDuration\u003e.\nCurrently, the minimum value allowed is 1s, and the maximum allowed value is\n120s. Minimum and maximum allowed values may change in future versions of OpenShift.\nNote that if a duration outside of these bounds is provided, the value of reloadInterval\nwill be capped/floored and not rejected (e.g. a duration of over 120s will be capped to\n120s; the IngressController will not reject and replace this disallowed value with\nthe default).\n\n\nA zero value for reloadInterval tells the IngressController to choose the default,\nwhich is currently 5s and subject to change without notice.\n\n\nThis field expects an unsigned duration string of decimal numbers, each with optional\nfraction and a unit suffix, e.g. \"300ms\", \"1.5h\" or \"2h45m\".\nValid time units are \"ns\", \"us\" (or \"µs\" U+00B5 or \"μs\" U+03BC), \"ms\", \"s\", \"m\", \"h\".\n\n\nNote: Setting a value significantly larger than the default of 5s can cause latency\nin observing updates to routes and their endpoints. HAProxy's configuration will\nbe reloaded less frequently, and newly created routes will not be served until the\nsubsequent reload.",
+              "type": "string",
+              "pattern": "^(0|([0-9]+(\\.[0-9]+)?(ns|us|µs|μs|ms|s|m|h))+)$"
+            },
+            "serverFinTimeout": {
+              "description": "serverFinTimeout defines how long a connection will be held open while\nwaiting for the server/backend response to the client closing the\nconnection.\n\n\nIf unset, the default timeout is 1s",
+              "type": "string",
+              "format": "duration"
+            },
+            "serverTimeout": {
+              "description": "serverTimeout defines how long a connection will be held open while\nwaiting for a server/backend response.\n\n\nIf unset, the default timeout is 30s",
+              "type": "string",
+              "format": "duration"
+            },
+            "threadCount": {
+              "description": "threadCount defines the number of threads created per HAProxy process.\nCreating more threads allows each ingress controller pod to handle more\nconnections, at the cost of more system resources being used. HAProxy\ncurrently supports up to 64 threads. If this field is empty, the\nIngressController will use the default value.  The current default is 4\nthreads, but this may change in future releases.\n\n\nSetting this field is generally not recommended. Increasing the number\nof HAProxy threads allows ingress controller pods to utilize more CPU\ntime under load, potentially starving other pods if set too high.\nReducing the number of threads may cause the ingress controller to\nperform poorly.",
+              "type": "integer",
+              "format": "int32",
+              "maximum": 64,
+              "minimum": 1
+            },
+            "tlsInspectDelay": {
+              "description": "tlsInspectDelay defines how long the router can hold data to find a\nmatching route.\n\n\nSetting this too short can cause the router to fall back to the default\ncertificate for edge-terminated or reencrypt routes even when a better\nmatching certificate could be used.\n\n\nIf unset, the default inspect delay is 5s",
+              "type": "string",
+              "format": "duration"
+            },
+            "tunnelTimeout": {
+              "description": "tunnelTimeout defines how long a tunnel connection (including\nwebsockets) will be held open while the tunnel is idle.\n\n\nIf unset, the default timeout is 1h",
+              "type": "string",
+              "format": "duration"
+            }
+          }
         }
       }
     },
